@@ -103,7 +103,7 @@ SEXP attribute_hidden do_sprintf(SEXP call, SEXP op, SEXP args, SEXP env)
 		else {
 		    /* recognise selected types from Table B-1 of K&R */
 		    /* This is MBCS-OK, as we are in a format spec */
-		    chunk = strcspn(formatString + cur + 1, "disfeEgGxX%") + 2;
+		    chunk = strcspn(formatString + cur + 1, "aAdisfeEgGxX%") + 2;
 		    if (cur + chunk > n)
 			error(_("unrecognised format at end of string"));
 
@@ -208,6 +208,8 @@ SEXP attribute_hidden do_sprintf(SEXP call, SEXP op, SEXP args, SEXP env)
 				    nprotect++;
 				}
 				break;
+			    case 'a':
+			    case 'A':
 			    case 'e':
 			    case 'f':
 			    case 'g':
@@ -272,9 +274,9 @@ SEXP attribute_hidden do_sprintf(SEXP call, SEXP op, SEXP args, SEXP env)
 			case REALSXP:
 			    {
 				double x = REAL(_this)[ns % thislen];
-				if (strcspn(fmtp, "feEgG") >= strlen(fmtp))
+				if (strcspn(fmtp, "aAfeEgG") >= strlen(fmtp))
 				    error("%s",
-					  _("use format %f, %e or %g for numeric objects"));
+					  _("use format %f, %e, %g or %a for numeric objects"));
 				if (R_FINITE(x)) {
 				    sprintf(bit, fmtp, x);
 				} else {
