@@ -307,6 +307,9 @@ NEW FEATURES
 	default, and so does var() with its default 'na.rm = FALSE'.  This
 	returns NA instead of signalling an error for NA observations.
 
+    o	sprintf() optionally supports the %a notation of C99 (if the
+	platform does, including under Windows).
+
 
 INSTALLATION
 
